--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,9 @@
-asgiref==3.4.1
-black==21.11b1
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.6
-click==8.0.3
-colorama==0.4.4
-cryptography==3.4.8
-defusedxml==0.7.1
-dj-database-url==0.5.0
 Django==3.2.7
-django-allauth==0.45.0
-django-heroku==0.3.1
-gunicorn==20.1.0
-idna==3.2
-Jinja2==3.0.1
+django_allauth==0.45.0
+django_filter==21.1
+django_heroku==0.3.1
+django_phonenumber_field==6.1.0
 joblib==1.1.0
-MarkupSafe==2.0.1
-mypy-extensions==0.4.3
-numpy==1.21.4
-oauthlib==3.1.1
 pandas==1.3.4
-pathspec==0.9.0
-Pillow==8.3.2
-platformdirs==2.4.0
-psycopg2==2.9.3
-pycparser==2.20
-PyJWT==2.1.0
-python-dateutil==2.8.2
-python-dotenv==0.19.2
-python-social-auth==0.3.6
-python3-openid==3.2.0
-pytz==2021.1
-regex==2021.11.10
-requests==2.26.0
-requests-oauthlib==1.3.0
-scikit-learn==1.0.2
-scipy==1.7.2
-six==1.16.0
-sklearn==0.0
-social-auth-app-django==5.0.0
-social-auth-core==4.1.0
-sqlparse==0.4.2
-threadpoolctl==3.0.0
-tomli==1.2.2
-typing_extensions==4.0.0
-urllib3==1.26.7
-whitenoise==5.3.0
+python-dotenv==0.20.0
+python_dateutil==2.8.2
